# vulkan_study

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg-configuration.json  vcpkg.json
src/: GlfwGeneral.hpp  VKBase.h  main.cpp
